--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+THIS SOURCE IS AFFECTED BY THE OPENSSL BUG 
+IF YOU FORKED IT PLEASE PATCH IT
+IF YOU ARE USING THIS FIRMWARE PLEASE DO NOT USE SSL COMPONENT
+
 This is the buildsystem for the OpenWrt Linux distribution.
 
 Please use "make menuconfig" to configure your appreciated
